# oshirase

./: .gitignore  LICENSE.md  README.md  go.mod  go.sum
aggregator/: .dockerignore  Cargo.toml  Dockerfile
aggregator/config/: config.docker.toml  config.toml
aggregator/graphql/: anilist_list_query.graphql  anilist_user_query.graphql
aggregator/graphql/anilist/: list_query.graphql
aggregator/src/: combiner.rs  config.rs  db.rs  emitter.rs  error.rs  lib.rs  main.rs  merge.rs  options.rs  sources.rs  test.rs  transform.rs  transformer.rs  worker.rs
aggregator/src/db/: mongodb.rs  oa_mongodb.rs  oa_redis.rs  redis.rs
aggregator/src/sources/: alt_titles_db.rs  anilist_api.rs  mangadex_api.rs  subsplease_rss.rs  subsplease_scraper.rs
api/: main.go
api/conf/: config.go
api/db/: mongodb.go
api/error/: error.go
api/graphql/anilist/: list_query.graphql
api/sources/: mangadex_api.go
api/v1/: middleware.go  router.go  util.go
api/v1/anime/: anime.go  list.go  schedule.go
api/v1/controllers/: anime.go  helpers.go  internal.go  manga.go
api/v1/manga/: list.go  manga.go
api/v1/models/: alt_title.go  alt_title_test.go  anilist.go  anilist_test.go  mangadex.go  subsplease.go  subsplease_test.go
api/v1/sources/: anilist_api.go  mangadex_api.go  subsplease_site.go
graphql/anilist/: list_query.graphql
rust/aggregator/config/: config.docker.toml  config.toml  crontab
rust/aggregator/src/: config.rs  main.rs  sources.rs
rust/aggregator/src/db/: mongodb.rs
rust/aggregator/src/sources/: alt_titles_db.rs  anilist_api.rs  mangadex_api.rs  subsplease_rss.rs  subsplease_scraper.rs
ui/: package.json  pnpm-lock.yaml
ui/src/app/: layout.tsx  page.tsx
worker/: Cargo.toml
worker/src/: error.rs  lib.rs  main.rs
