[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bson = "2.6"
futures = "0.3"
graphql_client = "0.12"
headless_chrome = "1.0"
mongodb = "2.5"
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.3"
